# algorithms

./: .gitattributes  .gitignore  COPILOT_SETUP.md  README.md  meson.build  requirements.txt  test_dissolution.py  validate_copilot_setup.py
.github/: copilot.yml
src/nanomodule/: .gitignore  meson.build  module.cpp
src/nanomodule/amplitudecorrection/: module.hpp
src/nanomodule/amplitudecorrection/functions/: functions.cpp
src/nanomodule/echogramprocessing/: c_bottomdetector.cpp  module.hpp
src/nanomodule/echogramprocessing/functions/: functions.cpp
src/nanomodule/featuremapping/: c_nearestfeaturemapper.cpp  module.cpp  module.hpp
src/nanomodule/geoprocessing/: module.hpp
src/nanomodule/geoprocessing/backtracers/: c_backtracedwci.cpp  c_btconstantsvp.cpp  c_i_backtracer.cpp  module.hpp
src/nanomodule/geoprocessing/datastructures/: c_beamaffine1d.cpp  c_beamsamplegeometry.cpp  c_beamsamplegeometrypiecewise.cpp  c_beamsampleparameters.cpp  c_raytraceresult.cpp  c_raytraceresults.cpp  c_sampledirections.cpp  c_sampledirectionsrange.cpp  c_sampledirectionstime.cpp  c_sampleindices.cpp  c_xyz.cpp  module.hpp
src/nanomodule/geoprocessing/functions/: module.hpp  to_raypoints.cpp
src/nanomodule/geoprocessing/raytracers/: c_i_raytracer.cpp  c_rtconstantsvp.cpp  module.hpp
src/nanomodule/geoprocessing/raytracers2/: c_layerraytracer.cpp  c_soundvelocityprofile.cpp  module.hpp
src/nanomodule/gridding/: c_forwardgridder1d.cpp  c_forwardgridder2d.cpp  c_forwardgridder3d.cpp  module.hpp
src/nanomodule/gridding/functions/: f_gridfunctions.cpp  f_resamplingfunctions.cpp  module.hpp
src/nanomodule/imageprocessing/: module.hpp
src/nanomodule/imageprocessing/functions/: functions.cpp
src/nanomodule/pointprocessing/: module.hpp
src/nanomodule/pointprocessing/bubblestreams/: module.hpp  zspine.cpp
src/nanomodule/pointprocessing/functions/: functions.cpp
src/nanomodule/signalprocessing/: module.hpp
src/nanomodule/signalprocessing/datastructures/: c_cwsignalparameters.cpp  c_fmsignalparameters.cpp  c_genericsignalparameters.cpp  module.cpp  module.hpp
src/pymodule/: .gitignore  m_navtools.cpp  meson.build  module.cpp
src/pymodule/amplitudecorrection/: module.hpp
src/pymodule/amplitudecorrection/functions/: functions.cpp  module.hpp
src/pymodule/featuremapping/: c_nearestfeaturemapper.cpp  module.cpp  module.hpp
src/pymodule/geoprocessing/: module.hpp
src/pymodule/geoprocessing/backtracers/: c_backtracedwci.cpp  c_btconstantsvp.cpp  c_i_backtracer.cpp  i_backtracer.cpp  module.hpp
src/pymodule/geoprocessing/datastructures/: c_beamsampleparameters.cpp  c_raytraceresult.cpp  c_raytraceresults.cpp  c_sampledirections.cpp  c_sampledirectionsrange.cpp  c_sampledirectionstime.cpp  c_sampleindices.cpp  c_samplelocationlocal.cpp  c_samplelocationslocal.cpp  c_xyz.cpp  module.hpp
src/pymodule/geoprocessing/functions/: module.hpp  to_raypoints.cpp
src/pymodule/geoprocessing/raytracers/: c_i_raytracer.cpp  c_rtconstantsvp.cpp  i_raytracer.cpp  module.hpp
src/pymodule/gridding/: c_forwardgridder1d.cpp  c_forwardgridder2d.cpp  c_forwardgridder3d.cpp  module.hpp
src/pymodule/gridding/functions/: f_gridfunctions.cpp  f_resamplingfunctions.cpp  module.hpp
src/pymodule/imageprocessing/: module.hpp
src/pymodule/imageprocessing/functions/: functions.cpp
src/pymodule/pch/: pch.hpp
src/pymodule/pointprocessing/: module.hpp
src/pymodule/pointprocessing/bubblestreams/: module.hpp  zspine.cpp
src/pymodule/pointprocessing/functions/: functions.cpp
src/pymodule/signalprocessing/: module.hpp
src/pymodule/signalprocessing/datastructures/: c_cwsignalinfos.cpp  c_cwsignalparameters.cpp  c_fmsignalparameters.cpp  c_genericsignalparameters.cpp  module.hpp
src/tests/: meson.build
src/tests/algorithms/functions/: absorption.test.cpp  rangecorrection.test.cpp  wcicorrection.test.cpp
src/tests/echogramprocessing/: bottom_detection.test.cpp
src/tests/featuremapping/: nearestfeaturemapper.test.cpp
src/tests/geoprocessing/backtracers/: backtracedwci.test.cpp  btconstantsvp.test.cpp  i_backtracer.test.cpp
src/tests/geoprocessing/datastructures/: beamsamplegeometrypiecewise.test.cpp  beamsampleparameters.test.cpp  raytraceresult.test.cpp  raytraceresults.test.cpp  sampledirections.test.cpp  sampledirectionsrange.test.cpp  sampledirectionstime.test.cpp  sampleindices.test.cpp  samplelocationlocal.test.cpp  samplelocationslocal.test.cpp  xyz.test.cpp
src/tests/geoprocessing/functions/: to_raypoints.test.cpp
src/tests/geoprocessing/raytracers/: i_raytracer.test.cpp  rtconstantsvp.test.cpp
src/tests/geoprocessing/raytracers2/: layerraytracer.test.cpp  soundvelocityprofile.test.cpp
src/tests/geoprocessing/sparsemaps/: sparsemap.test.cpp
src/tests/gridding/: forwardgridder.test.cpp  forwardgridder1d.test.cpp  forwardgridder2d.test.cpp  forwardgridder3d.test.cpp
src/tests/gridding/functions/: gridfunctions.test.cpp  resamplingfunctions.cpp
src/tests/imageprocessing/: backwardmapping.test.cpp  find_local_maxima.test.cpp  find_local_maxima2.test.cpp  grow_regions.test.cpp  weighted_median.cpp
src/tests/pointprocessing/bubblestreams/: zspine.test.cpp
src/tests/pointprocessing/functions/: segment_in_weighted_quantiles.cpp  weighted_median.cpp
src/tests/signalprocessing/datastructures/: cwsignalinfos.test.cpp  cwsignalparameters.test.cpp  fmsignalparameters.test.cpp  genericsignalparameters.test.cpp
src/themachinethatgoesping/algorithms/: helloping.hpp  meson.build
src/themachinethatgoesping/algorithms/.docstrings/: helloping.doc.hpp
src/themachinethatgoesping/algorithms/amplitudecorrection/: functions.hpp
src/themachinethatgoesping/algorithms/echogramprocessing/: bottomdetector.cpp  bottomdetector.hpp  functions.hpp
src/themachinethatgoesping/algorithms/featuremapping/: nearestfeaturemapper.cpp  nearestfeaturemapper.hpp
src/themachinethatgoesping/algorithms/geoprocessing/: datastructures.hpp  raytracers.hpp
src/themachinethatgoesping/algorithms/gridding/: forwardgridder1d.hpp  forwardgridder2d.hpp  forwardgridder3d.hpp
(+175 files in other folders)
